--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
-node = dev
-port = 5000
-db_local_url = "mongodb+srv://jihadmd7518:eNWKVZUpcBrOaLfF@cluster0.6qphnht.mongodb.net/newsPortal"
+node = 
+port = 
+db_local_url = 
 db_production_url = 
 
-secret = jihad75
-exp_time = 2d
+secret = 
+exp_time = 
 
-cloud_name = dwgpxuzbp
-api_key = 823243595689678
-api_secret = qNwBUQB9njAcLoBgSp27bj2h2LA
+cloud_name = 
+api_key = 
+api_secret = 
