--- a/userSite/package.json
+++ b/userSite/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "html-react-parser": "^5.1.18",
     "html-to-text": "^9.0.5",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
-    "react-html-parser": "^2.0.2",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-spinners-components": "^2.0.4"
